# rust-forensic-artifacts

./: Cargo.toml  chrome_history.sqlite
old/: browsing_history.rs  cli.rs  controller.rs  main.rs
src/: main.rs
src/controller/: arp_cache.rs  browsing_history.rs  dns_cache.rs  mod.rs  network_drive.rs  services.rs  traits.rs
